<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_insert"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="a57121035_0.it.montri.http.InsertActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:layout_weight="1" />

            <EditText
                android:layout_width="241dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/blank"
                android:ems="10"
                android:id="@+id/edtID"
                android:layout_weight="0.04" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:layout_weight="1" />

            <EditText
                android:layout_width="245dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/blank"
                android:ems="10"
                android:id="@+id/edtName" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:layout_weight="1" />

            <EditText
                android:layout_width="245dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/blank"
                android:ems="10"
                android:id="@+id/edtLastname" />

        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">

            <TextView
                android:text="@string/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:layout_weight="1" />

            <RadioButton
                android:text="@string/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rdoMale"
                android:layout_weight="1" />

            <RadioButton
                android:text="@string/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rdoFemale"
                android:layout_weight="1" />
        </RadioGroup>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:text="@string/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:layout_weight="1" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/edtEmail"
                android:layout_weight="0.63" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                android:layout_weight="1" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/blank"
                android:ems="10"
                android:id="@+id/edtUrl"
                android:layout_weight="0.55" />
        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:text="@string/daylab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView8"
                android:layout_weight="1" />

            <RadioButton
                android:text="@string/wed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rdoWed"
                android:layout_weight="1" />

            <RadioButton
                android:text="@string/thu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rdoThu"
                android:layout_weight="1" />
        </RadioGroup>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/groupLab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView9"
                android:layout_weight="1" />

            <Spinner
                android:layout_width="241dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinner"
                android:layout_weight="0.03"
                android:entries="@array/grouplabitem" />
        </LinearLayout>

        <Button
            android:text="@string/insertdata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnInsert" />

        <Button
            android:text="@string/clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnClear" />

    </LinearLayout>

</RelativeLayout>
