<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="a57121035_0.it.montri.http.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:layout_weight="1" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/blank"
                android:ems="10"
                android:id="@+id/edtID"
                android:layout_weight="1" />

        </LinearLayout>

        <Button
            android:text="@string/showdata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnShow" />

        <Button
            android:text="@string/insertdata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnInsert" />

        <Button
            android:text="@string/practice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnPractice" />

        <Button
            android:text="@string/json"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnJson" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/lvShow" />
    </LinearLayout>

</RelativeLayout>
